2004-04-19  David Schleef  <ds@schleef.org>

	* configure.ac: Add test for allowing unaligned access.  Add define
	to put in gstconfig.h.
	* docs/gst/gstreamer-sections.txt: New symbols
	* docs/gst/tmpl/gstcompat.sgml: Check in changes made by gtkdoc
	* docs/gst/tmpl/gstfilesrc.sgml:
	* docs/gst/tmpl/gstparse.sgml:
	* docs/gst/tmpl/gsttypes.sgml:
	* docs/gst/tmpl/gstutils.sgml:
	* docs/gst/tmpl/gstvalue.sgml:
	* gst/gstconfig.h.in: Add GST_HAVE_UNALIGNED_ACCESS
	* gst/gstutils.h: Add macros for unaligned memory access.  Useful
	on most !i386/!powerpc architectures.  From Daniel Gazard
	<daniel.gazard@free.fr>.  (bug #140156)
	* po/af.po: Check in changes made by gettext.
	* po/az.po:
	* po/fr.po:
	* po/nl.po:
	* po/sr.po:
	* po/sv.po:

2004-04-20  Benjamin Otte  <otte@gnome.org>

	* gst/schedulers/entryscheduler.c: 
	(gst_entry_scheduler_yield):
	  refuse to yield when decoupled elements insist on doing that.
	  At least it's better than crashing

2004-04-19  David Schleef  <ds@schleef.org>

	* docs/libs/Makefile.am: Change sinclude to include
	* docs/gst/Makefile.am: same
	* pkgconfig/Makefile.am:  Remove GNU-ism from makefile target

2004-04-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/uk.po:
          Added Ukrainian translation (Maxim V. Dziumanenko)

2004-04-19  Johan Dahlin  <johan@gnome.org>

	* gst/parse/grammar.y (__gst_parse_chain_free): Don't do null
	checking here, do it before calling the function.
	Clean up, use for loops instead of while loops while iterating
	over lists.

	* gst/autoplug/gstspider.c (gst_spider_request_new_pad): Fix typo
	in debug message.
	(gst_spider_create_and_plug): Improve debug message.
	General: Replace while loops which iterates over GLists with for
	loops. Which are much cleaner, improves readability, especially
	for gst_spider_identity_plug

	* gst/gstpad.c (_invent_event): Fix parameters to warning macros,
	fixes bug 140477
